# namematching-Python

./: .gitignore  README.md  main.py  name_matching.ipynb  pyproject.toml
data/outputs/: name_match_results.csv  unmatched_members.csv
test_scripts/: deterministic.py  probabilistic.py  test_deterministic.py
