[project]
name = "python-name-matching-main"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "ipykernel>=6.30.1",
    "ipython>=9.6.0",
    "matplotlib>=3.10.6",
    "pandas>=2.3.3",
    "rapidfuzz>=3.14.1",
    "recordlinkage>=0.16",
]
